# DNSLookup

./: Dockerfile  LICENSE  README.md  nixpacks.toml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: docker.yml
dnslookup/: app.py
dnslookup/templates/: index.html
dnslookupapi/: app.py
dnslookupapi/static/: script.js  style.css
dnslookupapi/templates/: index.html
